fixed tooltip not showing on mobile devices

--- a/src/app/components/sidebar/special-notes/special-notes.component.scss
+++ b/src/app/components/sidebar/special-notes/special-notes.component.scss
@@ -1,7 +1,10 @@
 .notes-wrapper {
-    margin: 15px 0;
+    margin: 30px 0;
     font-size: 0.75rem;
     p{
         line-height: 16.34px;
+    }
+    @media (max-width:480px) {
+        margin: 15px 0;
     }
 }
