--- a/src/app/components/sidebar/tooltip/tooltip.component.scss
+++ b/src/app/components/sidebar/tooltip/tooltip.component.scss
@@ -1,4 +1,6 @@
 .tooltip{
     margin-left: 5px;
     margin-top: 6px;
+    background-color: transparent;
+    border: none;
 }
